tests/ui/use/use-mod/use-mod-2.stderr
error: imports need to be explicitly named
  --> $DIR/use-mod-2.rs:2:16
   |
LL |     use self::{self};
   |                ^^^^
   |
help: try renaming it with a name
   |
LL |     use self::{self as name};
   |                     +++++++

error: imports need to be explicitly named
  --> $DIR/use-mod-2.rs:5:17
   |
LL |     use super::{self};
   |                 ^^^^
   |
help: try renaming it with a name
   |
LL |     use super::{self as name};
   |                      +++++++

error: aborting due to 2 previous errors

